--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.8.3",
     "quasar": "^2.0.0",
     "vue": "^3.2.13",
-    "vue-i18n": "^9.1.0"
+    "vue-i18n": "^9.1.0",
+    "vue-window-size": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
