--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,6 @@ jobs:
           cd /var/www/restoration-master.ru/
           git pull origin main
           git status
-          cd /var/www/restoration-master.ru/Restoration-master/
+          cd /var/www/restoration-master.ru/Restoration-Master
           npm install --only=prod
           npm run build
