--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         port: 22
         script: |
           cd /var/www/restoration-master.ru/
-          git pull origin main
+          git pull
           git status
           npm install 
           npm run build
